--- a/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
@@ -28,12 +28,31 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
 
+  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="grid-double">
+    <div *ngIf="_applicationSubmission.soilProjectDurationAmount && _applicationSubmission.soilProjectDurationUnit">
+      {{ _applicationSubmission.soilProjectDurationAmount }}
+      <ng-container [ngPlural]="_applicationSubmission.soilProjectDurationAmount">
+        <ng-template ngPluralCase="=1">
+          {{ _applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
+        </ng-template>
+        <ng-template ngPluralCase="other">
+          {{ _applicationSubmission.soilProjectDurationUnit | titlecase }}
+        </ng-template>
+      </ng-container>
+    </div>
+    <app-no-data
+      [showRequired]="showErrors"
+      *ngIf="!_applicationSubmission.soilProjectDurationAmount || !_applicationSubmission.soilProjectDurationUnit"
+    ></app-no-data>
+  </div>
+
   <div class="full-width soil-table">
     <div></div>
-    <div><strong>Soil to be Removed</strong></div>
-    <div><strong>Fill to be Placed</strong></div>
+    <div class="subheading2">Soil to be Removed</div>
+    <div class="subheading2">Fill to be Placed</div>
 
-    <div><strong>Volume</strong></div>
+    <div class="subheading2">Volume</div>
     <div>
       {{ _applicationSubmission.soilToRemoveVolume }}
       <span *ngIf="_applicationSubmission.soilToRemoveVolume !== null">m<sup>3</sup></span>
@@ -45,7 +64,7 @@
       <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.soilToPlaceVolume === null"></app-no-data>
     </div>
 
-    <div><strong>Area</strong></div>
+    <div class="subheading2">Area</div>
     <div>
       {{ _applicationSubmission.soilToRemoveArea }}
       <span *ngIf="_applicationSubmission.soilToRemoveArea !== null">m<sup>2</sup></span>
@@ -57,7 +76,7 @@
       <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.soilToPlaceArea === null"></app-no-data>
     </div>
 
-    <div><strong>Maximum Depth</strong></div>
+    <div class="subheading2">Maximum Depth</div>
     <div>
       {{ _applicationSubmission.soilToRemoveMaximumDepth }}
       <span *ngIf="_applicationSubmission.soilToRemoveMaximumDepth !== null">m</span>
@@ -75,7 +94,7 @@
       ></app-no-data>
     </div>
 
-    <div><strong>Average Depth</strong></div>
+    <div class="subheading2">Average Depth</div>
     <div>
       {{ _applicationSubmission.soilToRemoveAverageDepth }}
       <span *ngIf="_applicationSubmission.soilToRemoveAverageDepth !== null">m</span>
@@ -96,10 +115,10 @@
     <div class="spacer-row"></div>
 
     <div></div>
-    <div><strong>Soil already Removed</strong></div>
-    <div><strong>Fill already Placed</strong></div>
+    <div class="subheading2">Soil already Removed</div>
+    <div class="subheading2">Fill already Placed</div>
 
-    <div><strong>Volume</strong></div>
+    <div class="subheading2">Volume</div>
     <div>
       {{ _applicationSubmission.soilAlreadyRemovedVolume }}
       <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
@@ -117,7 +136,7 @@
       ></app-no-data>
     </div>
 
-    <div><strong>Area</strong></div>
+    <div class="subheading2">Area</div>
     <div>
       {{ _applicationSubmission.soilAlreadyRemovedArea }}
       <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea !== null">m<sup>2</sup></span>
@@ -135,7 +154,7 @@
       ></app-no-data>
     </div>
 
-    <div><strong>Maximum Depth</strong></div>
+    <div class="subheading2">Maximum Depth</div>
     <div>
       {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
       <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
@@ -153,7 +172,7 @@
       ></app-no-data>
     </div>
 
-    <div><strong>Average Depth</strong></div>
+    <div class="subheading2">Average Depth</div>
     <div>
       {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
       <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
@@ -170,24 +189,6 @@
         *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth === null"
       ></app-no-data>
     </div>
-  </div>
-
-  <div class="full-width">
-    <span class="subheading1">Project Duration</span>
-  </div>
-  <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
-  </div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationUnit }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilProjectDurationUnit"></app-no-data>
-  </div>
-  <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
-  </div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationAmount }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilProjectDurationAmount"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">
