--- a/portal-frontend/src/app/features/applications/application-details/nfu-details/nfu-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/nfu-details/nfu-details.component.html
@@ -72,53 +72,54 @@
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillOriginDescription"></app-no-data>
     </div>
 
-    <div class="grid-1"></div>
+    <div class="subheading2 grid-1">Fill Project Duration</div>
     <div class="grid-double">
-      <strong> Fill to be Placed </strong>
+      <div *ngIf="applicationSubmission.nfuProjectDurationAmount && applicationSubmission.nfuProjectDurationUnit">
+        {{ applicationSubmission.nfuProjectDurationAmount }}
+        <ng-container [ngPlural]="applicationSubmission.nfuProjectDurationAmount">
+          <ng-template ngPluralCase="=1">
+            {{ applicationSubmission.nfuProjectDurationUnit.slice(0, -1) | titlecase }}
+          </ng-template>
+          <ng-template ngPluralCase="other">
+            {{ applicationSubmission.nfuProjectDurationUnit | titlecase }}
+          </ng-template>
+        </ng-container>
+      </div>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="!applicationSubmission.nfuProjectDurationAmount || !applicationSubmission.nfuProjectDurationUnit"
+      ></app-no-data>
+    </div>
+
+    <div class="grid-1"></div>
+    <div class="subheading2 grid-double">
+      Fill to be Placed
       <app-updated-banner *ngIf="updatedFields.includes('nfuToPlaceVolume')"></app-updated-banner>
     </div>
 
-    <div class="grid-1"><strong>Volume</strong></div>
+    <div class="subheading2 grid-1">Volume</div>
     <div class="grid-double">
       {{ applicationSubmission.nfuFillVolume }}
       <span *ngIf="applicationSubmission.nfuFillVolume !== null">m<sup>3</sup></span>
       <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuFillVolume === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Area</strong></div>
+    <div class="subheading2 grid-1">Area=</div>
     <div class="grid-double">
       {{ applicationSubmission.nfuTotalFillArea }}
       <span *ngIf="applicationSubmission.nfuTotalFillArea !== null">m<sup>2</sup></span>
       <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuTotalFillArea === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Maximum Depth</strong></div>
+    <div class="subheading2 grid-1">Maximum Depth</div>
     <div class="grid-double">
       {{ applicationSubmission.nfuMaxFillDepth }}
       <span *ngIf="applicationSubmission.nfuMaxFillDepth !== null">m</span>
       <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuMaxFillDepth === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Average Depth</strong></div>
+    <div class="subheading2 grid-1">Average Depth</div>
     <div class="grid-double">
       {{ applicationSubmission.nfuAverageFillDepth }}
       <span *ngIf="applicationSubmission.nfuAverageFillDepth !== null">m</span>
       <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuAverageFillDepth === null"></app-no-data>
-    </div>
-
-    <div class="full-width">
-      <span class="subheading1">Project Duration</span>
-    </div>
-    <div class="subheading2 grid-1">
-      Duration <app-updated-banner *ngIf="updatedFields.includes('nfuProjectDurationUnit')"></app-updated-banner>
-    </div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationUnit }}
-      <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuProjectDurationUnit"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">
-      Length <app-updated-banner *ngIf="updatedFields.includes('nfuProjectDurationAmount')"></app-updated-banner>
-    </div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationAmount }}
-      <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuProjectDurationAmount"></app-no-data>
     </div>
   </ng-container>
   <div *ngIf="showEdit" class="edit-button">
