--- a/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
@@ -28,33 +28,52 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
 
-  <div class="grid-1"></div>
+  <div class="subheading2 grid-1">Project Duration</div>
   <div class="grid-double">
-    <strong> Soil to be Removed </strong>
+    <div *ngIf="_applicationSubmission.soilProjectDurationAmount && _applicationSubmission.soilProjectDurationUnit">
+      {{ _applicationSubmission.soilProjectDurationAmount }}
+      <ng-container [ngPlural]="_applicationSubmission.soilProjectDurationAmount">
+        <ng-template ngPluralCase="=1">
+          {{ _applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
+        </ng-template>
+        <ng-template ngPluralCase="other">
+          {{ _applicationSubmission.soilProjectDurationUnit | titlecase }}
+        </ng-template>
+      </ng-container>
+    </div>
+    <app-no-data
+      [showRequired]="showErrors"
+      *ngIf="!_applicationSubmission.soilProjectDurationAmount || !_applicationSubmission.soilProjectDurationUnit"
+    ></app-no-data>
+  </div>
+
+  <div class="grid-1"></div>
+  <div class="subheading2 grid-double">
+    Soil to be Removed
     <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
   </div>
 
-  <div class="grid-1"><strong>Volume</strong></div>
+  <div class="subheading2 grid-1">Volume</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilToRemoveVolume }}
     <span *ngIf="_applicationSubmission.soilToRemoveVolume">m<sup>3</sup></span>
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveVolume"></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Area</strong></div>
+  <div class="subheading2 grid-1">Area</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilToRemoveArea }} <span *ngIf="_applicationSubmission.soilToRemoveArea">ha</span>
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveArea"></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Maximum Depth</strong></div>
+  <div class="subheading2 grid-1">Maximum Depth</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilToRemoveMaximumDepth }}
     <span *ngIf="_applicationSubmission.soilToRemoveMaximumDepth">m</span>
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilToRemoveMaximumDepth"></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Average Depth</strong></div>
+  <div class="subheading2 grid-1">Average Depth</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilToRemoveAverageDepth }}
     <span *ngIf="_applicationSubmission.soilToRemoveAverageDepth">m</span>
@@ -62,12 +81,12 @@
   </div>
 
   <div class="grid-1"></div>
-  <div class="grid-double">
-    <strong> Soil already Removed </strong>
+  <div class="subheading2 grid-double">
+    Soil already Removed
     <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
   </div>
 
-  <div class="grid-1"><strong>Volume</strong></div>
+  <div class="subheading2 grid-1">Volume</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilAlreadyRemovedVolume }}
     <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
@@ -77,7 +96,7 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Area</strong></div>
+  <div class="subheading2 grid-1">Area</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilAlreadyRemovedArea }}
     <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea !== null">ha</span>
@@ -87,7 +106,7 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Maximum Depth</strong></div>
+  <div class="subheading2 grid-1">Maximum Depth</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
     <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
@@ -97,7 +116,7 @@
     ></app-no-data>
   </div>
 
-  <div class="grid-1"><strong>Average Depth</strong></div>
+  <div class="subheading2 grid-1">Average Depth</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
     <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
@@ -105,24 +124,6 @@
       [showRequired]="showErrors"
       *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth === null"
     ></app-no-data>
-  </div>
-
-  <div class="full-width">
-    <span class="subheading1">Project Duration</span>
-  </div>
-  <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
-  </div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationUnit }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilProjectDurationUnit"></app-no-data>
-  </div>
-  <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
-  </div>
-  <div class="grid-double">
-    {{ _applicationSubmission.soilProjectDurationAmount }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilProjectDurationAmount"></app-no-data>
   </div>
 
   <div class="subheading2 grid-1">
